--- a/frontend/src/views/ulaznica.pug
+++ b/frontend/src/views/ulaznica.pug
@@ -8,7 +8,7 @@ html
     header
       div(class="header-container")
         a(href="/") 
-          span(class="house-icon") 🏠︎
+          div(class="house-icon") Početna
         span(id="username")
         button(class="logout-button" id="logout-button") Odjava
     div(class="container")
