--- a/frontend/src/views/index-spa.pug
+++ b/frontend/src/views/index-spa.pug
@@ -7,7 +7,7 @@ html
     body 
         div(class="header-container" id="header-container")
             a(href="/") 
-                span(class="house-icon") 🏠︎
+                div(class="house-icon") Početna
             span(id="username")
             button(class="logout-button" id="logout-button") Odjava
         div(class="container")
